--- a/dbc_overflow/app/views/questions/new.html.erb
+++ b/dbc_overflow/app/views/questions/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Question</h1>
 
-#the form needs to use a diff url in order to go somewhere else so we add after question , url: articles_path
+
 
 <%= form_for :question, url: questions_path do |f| %>
   <p>
@@ -9,11 +9,13 @@
   </p>
 
   <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
   </p>
 
   <p>
     <%= f.submit %>
   </p>
 <% end %>
+
+<%= link_to 'Back', questions_path %>
