added edit feature to questions

--- a/dbc_overflow/app/views/questions/index.html.erb
+++ b/dbc_overflow/app/views/questions/index.html.erb
@@ -3,18 +3,20 @@
 
 
 <table>
+
   <tr>
     <th> Title</th>
     <th> Text </th>
   </tr>
 
   <% @questions.each do |question| %>
-  <tr>
-    <td> <%= question.title %> </td>
-    <td> <%= question.body %> </td>
-  </tr>
+    <tr>
+      <td> <%= question.title %> </td>
+      <td> <%= question.body %> </td>
+      <td> <%= link_to 'Show', question_path(question) %> </td>
+      <td> <%= link_to 'Edit', edit_question_path(question) %> </td>
+    </tr>
   <% end %>
-
 
 </table>
 
