add feature delete question

--- a/dbc_overflow/app/views/questions/index.html.erb
+++ b/dbc_overflow/app/views/questions/index.html.erb
@@ -15,6 +15,9 @@
       <td> <%= question.body %> </td>
       <td> <%= link_to 'Show', question_path(question) %> </td>
       <td> <%= link_to 'Edit', edit_question_path(question) %> </td>
+      <td> <%= link_to 'Destroy', question_path(question),
+            method: :delete,
+            data: {confirm: 'Are you sure'} %> </td>
     </tr>
   <% end %>
 
