--- a/dbc_overflow/app/views/questions/index.html.erb
+++ b/dbc_overflow/app/views/questions/index.html.erb
@@ -18,6 +18,10 @@
       <td> <%= link_to 'Destroy', question_path(question),
             method: :delete,
             data: {confirm: 'Are you sure'} %> </td>
+      <td> <%= link_to("UpVote", question_upvote_path(question))%> </td>
+      <td> <%= link_to("DownVote", question_downvote_path(question))%> </td>
+
+
     </tr>
   <% end %>
 
