--- a/dbc_overflow/app/views/questions/index.html.erb
+++ b/dbc_overflow/app/views/questions/index.html.erb
@@ -7,12 +7,15 @@
   <tr>
     <th> Title</th>
     <th> Text </th>
+    <th> Votes </th>
   </tr>
 
   <% @questions.each do |question| %>
     <tr>
       <td> <%= question.title %> </td>
       <td> <%= question.body %> </td>
+      <td> <%= question.votes %> </td>
+
       <td> <%= link_to 'Show', question_path(question) %> </td>
       <td> <%= link_to 'Edit', edit_question_path(question) %> </td>
       <td> <%= link_to 'Destroy', question_path(question),
