add link_to to destroy and update answers

--- a/dbc_overflow/app/views/questions/show.html.erb
+++ b/dbc_overflow/app/views/questions/show.html.erb
@@ -13,6 +13,11 @@
   <%= @question.votes %>
 </p>
 
+<p>
+  <strong>Question ID:</strong>
+  <%= @question.id %>
+</p>
+
 <h2>Answer</h2>
 <% @question.answers.each do |answer| %>
   <p>
@@ -24,6 +29,18 @@
     <strong>Answer:</strong>
     <%= answer.body %>
   </p>
+
+  <p>
+    <strong>Votes:</strong>
+    <%= answer.votes %>
+  </p>
+
+
+ <p> <%= link_to 'Edit', edit_question_answer_path(answer, :question_id=>@question.id) %> </p>
+ <p> <%= link_to 'Destroy', question_answer_path(answer, :question_id=>@question.id),
+              method: :delete,
+              data: {confirm: 'Are you sure'} %></p>
+
 
 
 <% end %>
