--- a/dbc_overflow/app/views/questions/show.html.erb
+++ b/dbc_overflow/app/views/questions/show.html.erb
@@ -1,3 +1,6 @@
+
+<!-- ######################     DISPLAY QUESTION INFORMATION   ############################ -->
+
 <p>
   <strong>Title:</strong>
   <%= @question.title %>
@@ -14,21 +17,19 @@
 <p> <%= button_tag("UpVote", 'data-url' => upvote_question_path(@question), :class =>"upvote")%> </p>
 <p> <%= button_tag("DownVote", 'data-url' => downvote_question_path(@question), :class =>"downvote")%> </p>
 
+<!-- ######################     DISPLAY QUESTION ANSWERS   ############################ -->
+
 <h2>Answer</h2>
 <% @question.answers.each do |answer| %>
-  <p>
-    <strong>Title:</strong>
-    <%= answer.title %>
-  </p>
 
-  <p>
-    <strong>Answer:</strong>
-    <%= answer.body %>
-  </p>
+  <strong>Title:</strong>
+  <p> <%= answer.title %></p>
+
+  <strong>Answer:</strong>
+  <p><%= answer.body %> </p>
 
   <strong>Votes:</strong>
   <p id= "<%= answer.id %>"> <%= answer.votes %> </p>
-
 
   <p> <%= link_to 'Edit', edit_question_answer_path(answer, :question_id=>@question.id) %> </p>
   <p> <%= link_to 'Destroy', question_answer_path(answer, :question_id=>@question.id),
@@ -40,8 +41,9 @@
 
 <% end %>
 
+<!-- ######################     NEW ANSWER FORM    ############################ -->
 
-<h2>Add Answer:</h2>
+<h2 id = "results">Add Answer:</h2>
 
 <%= form_for([@question, @question.answers.build]) do |f| %>
   <p>
@@ -57,29 +59,26 @@
   </p>
 <% end %>
 
-<div id = "results"></div>
 
 <%= link_to 'Back', questions_path %>
 <%= link_to 'Edit', edit_question_path(@question) %>
 
+<!-- ######################      Template for Ajax    ######################## -->
 
 <script id="new_answer_template" type="text/x-handlebars-template">
 
-    <tr>
-      <td>{{answerResponse.title}}</td>
-      <td>{{answerResponse.body}}</td>
+  <p>Title:{{answerResponse.title}}</p>
+  <p>Answer:{{answerResponse.body}}</p>
 
-      <td id="{{answerResponse.id}}">{{answerResponse.votes}}</td>
+  <p id="{{answerResponse.id}}">Votes:{{answerResponse.votes}}</p>
 
+  <p><%= link_to "Edit", "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/edit" %></p>
+  <p><%= link_to 'Destroy', "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}",
+        method: :delete,
+        data: {confirm: 'Are you sure'} %> </p>
 
-      <td><%= link_to "Edit", "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/edit" %></td>
-      <td><%= link_to 'Destroy', "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}",
-            method: :delete,
-            data: {confirm: 'Are you sure'} %> </td>
-
-      <td><%= button_tag "UpVote", 'data-url' => "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/upvote", :class =>"upvote"%></td>
-      <td><%= button_tag "DownVote", 'data-url' => "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/downvote", :class =>"downvote"%></td>
-
-    </tr>
-
+  <td><%= button_tag "UpVote", 'data-url' => "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/upvote", :class =>"upvote"%></td>
+  <td><%= button_tag "DownVote", 'data-url' => "/questions/{{answerResponse.question_id}}/answers/{{answerResponse.id}}/downvote", :class =>"downvote"%></td>
 </script>
+
+
