--- a/dbc_overflow/app/views/questions/index.html.erb
+++ b/dbc_overflow/app/views/questions/index.html.erb
@@ -1,22 +1,27 @@
-<h1>Listing all Questions</h1>
+<div class= "container">
+  <h1>Listing all Questions</h1>
 
-<%= @quote.body %>
+  <%= @quote.body %>
 
-<%= form_for :question, :html => {:id => "new-question", "data-url" => questions_path} do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+  <h3>Something to Ask?</h3>
+  <%= form_for :question, :html => {:id => "new-question", "data-url" => questions_path} do |f| %>
 
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
+    <p>
+      <%= f.label :title %><br>
+      <%= f.text_field :title, class: "form-control" %>
+    </p>
 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+
+    <p>
+      <%= f.label :body %><br>
+      <%= f.text_area :body, class: "form-control" %>
+    </p>
+
+    <p>
+      <%= f.submit "Ask", class: "btn btn-large btn-primary" %>
+    </p>
+  <% end %>
+</div>
 
 <script id="new_question_template" type="text/x-handlebars-template">
 
@@ -33,6 +38,9 @@
 
       <td><%= button_tag "UpVote", 'data-url' => "/questions/{{response.id}}/upvote", :class =>"upvote"%></td>
       <td><%= button_tag "DownVote", 'data-url' => "/questions/{{response.id}}/downvote", :class =>"downvote"%></td>
+
+
+
     </tr>
 
 </script>
@@ -53,14 +61,37 @@
         <td> <%= question.body %> </td>
         <td id= "<%= question.id %>"> <%= question.votes %> </td>
 
-        <td> <%= link_to 'Show', question_path(question) %> </td>
-        <td> <%= link_to 'Edit', edit_question_path(question) %> </td>
-        <td> <%= link_to 'Destroy', question_path(question),
-              method: :delete,
-              data: {confirm: 'Are you sure'} %> </td>
+        <td>
+          <%= link_to question_path(question),class: "btn btn-default" do %>
+            <i class="glyphicon glyphicon-log-in">Show</i>
+          <% end %>
+        </td>
 
-        <td> <%= button_tag("UpVote", 'data-url' => upvote_question_path(question), :class =>"upvote")%> </td>
-        <td> <%= button_tag("DownVote", 'data-url' => downvote_question_path(question), :class =>"downvote")%> </td>
+        <td>
+          <%= link_to edit_question_path(question), class: "btn btn-default" do %>
+            <i class="glyphicon glyphicon-edit">Edit</i>
+          <% end %>
+         </td>
+
+        <td> <%= link_to question_path(question),
+              method: :delete,
+              data: {confirm: 'Are you sure'},
+              class: "btn btn-default" do %>
+                <i class="glyphicon glyphicon-trash"></i>
+              <% end %>
+        </td>
+
+        <td>
+          <%= button_tag('data-url' => upvote_question_path(question), :class =>"upvote btn btn-default") do %>
+            <i class="glyphicon glyphicon-triangle-top"></i>
+          <% end %>
+        </td>
+
+        <td>
+          <%= button_tag('data-url' => downvote_question_path(question), :class =>"downvote btn btn-default") do%>
+            <i class="glyphicon glyphicon-triangle-bottom"></i>
+          <% end %>
+        </td>
 
       </tr>
     <% end %>
